- Improved how mixins are applied. Now a mixin does not overwrite existing properties/methods if already declared in the class the mixin is applied to. - __super__ now reference the prototype, not the function object - Field getValue/setValue now store the value in the View object instead of the dom element - Now using jquery-ui to align a form.DatePicker popup. Introduced jquery-ui dependency (just the smaller lower-level non-visual parts) - Fixed bugs in how UploadField handles setValue

--- a/css/gui.scss
+++ b/css/gui.scss
@@ -281,7 +281,7 @@
 /* ============== */
 .calendar.datepicker {
     width: 250px;
-    position: fixed;
+    position: absolute;
     background-color: #fff;
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
